[metadata]
name = safeagent-exec-guard
description = Deterministic execution guard for AI agents: request-id dedup + finality gating + durable state.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ai agents, idempotency, exactly once, reliability, execution guard, deduplication